# Robot-Remote-Controller

./: .gitmodules  README.md
app/: CMakeLists.txt  README.md
app/remote_control_agent/: CMakeLists.txt  README.md  i_joystick_driver.h  i_link_manager.h  remote_control_agent.cpp  remote_control_agent.h
app/remote_control_agent/test/: CMakeLists.txt  remote_control_agent_test.cpp
hal/: CMakeLists.txt  README.md  record_serial_logs.sh  serial_log.txt
hal/joystick_driver/: CMakeLists.txt  adc_gpio_utility.h  i_joystick_driver.h  joystick_driver.cpp  joystick_driver.h  joystick_driver_hw504.cpp  joystick_driver_hw504.h
hal/joystick_driver/test/: CMakeLists.txt  joystick_driver_test.cpp
hal/link_manager/: CMakeLists.txt  i_link_manager.h  radio_nrf24l01.cpp  radio_nrf24l01.h
hal/src/: CMakeLists.txt  main.cpp
